# solarpositioning-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: combined_pattern_performance.rs  performance_scenarios.rs
examples/: api_verification.rs  basic_usage.rs  grena3_comparison.rs  no_std_usage.rs  sunrise_sunset.rs  sunrise_without_chrono.rs
scripts/: horizons_check.py
src/: error.rs  grena3.rs  lib.rs  math.rs  time.rs  types.rs
src/spa/: coefficients.rs  mod.rs
tests/: combined_pattern_optimization.rs  csv_reference_validation.rs  java_comparison.rs  spa_accuracy.rs  spa_reference_validation.rs  sunce_full_test.rs  sunce_standard_case.rs  sunrise_midnight_boundary.rs  sunrise_non_chrono.rs  sunrise_reference_validation.rs  sunrise_regressions.rs  usno_reference_validation.rs
tests/data/usno/: usno_reference_testdata_extreme.csv
