[package]
name = "solar-positioning"
version = "0.4.2"
edition = "2021"
rust-version = "1.70"
license = "MIT"
description = "High-accuracy solar positioning algorithms (SPA and Grena3) for calculating sun position and sunrise/sunset/twilight times"
homepage = "https://github.com/klausbrunner/solarpositioning-rs"
repository = "https://github.com/klausbrunner/solarpositioning-rs"
documentation = "https://docs.rs/solar-positioning"
readme = "README.md"
categories = ["science", "algorithms", "mathematics"]
keywords = ["solar", "sun", "astronomy", "spa", "sunrise"]
authors = ["Klaus Brunner <klaus.brunner@gmail.com>"]
exclude = [
    ".github/",
    "tests/data/",
    "benches/data/",
]

[dependencies]
# Core dependencies
thiserror = { version = "2.0", default-features = false }

# Optional dependencies
chrono = { version = "0.4", default-features = false, optional = true }
libm = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
csv = "1.3"
chrono = { version = "0.4", features = ["clock"] }
chrono-tz = "0.10"

[features]
default = ["std", "chrono"]
std = []
chrono = ["dep:chrono"]
libm = ["dep:libm"]
unstable = []

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
overflow-checks = false
panic = "abort"

[profile.bench]
debug = true

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "sunrise_sunset"
path = "examples/sunrise_sunset.rs"

[[example]]
name = "grena3_comparison"
path = "examples/grena3_comparison.rs"

[[bench]]
name = "performance_scenarios"
harness = false
